--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,3 @@
-== README
+#67-475 Cycle 2
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+We want to help connect people who have made it a habit to always stick to their routine, and those who want to get involved in exercise.
