--- a/README.rdoc
+++ b/README.rdoc
@@ -1,3 +1,12 @@
 #67-475 Cycle 2
 
 We want to help connect people who have made it a habit to always stick to their routine, and those who want to get involved in exercise.
+
+##To Get Started:
+
+```
+bundle install
+rake db:migrate
+rake db:populate
+rails s
+```
